# Data-Odyssey

./: README.md  gitignore
EPTSAML/: README.md
EPTSAML/data/processed/: universe.feather
EPTSAML/notebooks/: Showcase.ipynb
EPTSAML/src/data/: clean_data.py  retrieve_data.py
EPTSAML/src/functions/: package.py
GENAIA/: .gitignore  README.md  requirements.txt
GENAIA/notebook/: customer_support.ipynb  news_reporter.ipynb
LBERT/: README.md
LBERT/data/interim/: s1_consolidate.csv
LBERT/data/raw/: assetMonitEvent v1.0.xlsx  assetMonitEvent v2.0.xlsx  cityWireNews v1.0.xlsx  cityWireNews v2.0.xlsx
LBERT/data/test/: citywire_test.xlsx
LBERT/docs/: category_similarity.xlsx
LBERT/docs/test log/: test_eval.xlsx
LBERT/docs/train log/: 20230623_training_log.xlsx
LBERT/src/data/: s1 - consolidate.py
LBERT/src/features/: s1 - genfeats.py
LBERT/src/model/: s1 - finbert lt.py  s2 - finbert lt.py
LBERT/src/utils/: bert.py  splitting.py  utils.py
NTTW/: README.md  requirements.txt
NTTW/data/vectordb/a9b9b058-011b-44f2-a5d3-d11724c64be1/: index_metadata.pickle
NTTW/notebook/: Part 1 - Getting Knowledge.ipynb  Part 2 - Retrieving Knowledge.ipynb
NTTW/src/utils/: utils.py
SPGPS/: README.md
SPGPS/data/processed/: comp_embeddings.pkl
SPGPS/notebooks/: Showcase.ipynb
SPGPS/src/data/: s1 - getData.py  s2 - embedding.py
SPGPS/src/functions/: utils.py
TLACB/: README.md
TLACB/data/inputs/processed/: notas_prensa_bcrp.csv
TLACB/notebooks/: TEXT_CLASSIFICATION.ipynb
TLACB/src/: 1 get_pdf_files.py  2 processed_pdf_files.py
TLACB/src/utils/: topic_modelling.py
UIGT/: README.md
UIGT/user-insights/: .gitignore  pyproject.toml  requirements.txt  session_store.db
UIGT/user-insights/.viz/: stats.json
UIGT/user-insights/conf/: logging.yml
UIGT/user-insights/conf/base/: catalog.yml  parameters_audio_processing.yml  parameters_create_report.yml  parameters_interview_management.yml  parameters_llm_parsing.yml
UIGT/user-insights/tests/: test_run.py
VLMs/: RADME.md  README.md  pyproject.toml
VLMs/tunnel_vision/data/raw/: 7eleven Valueact.pdfZone.Identifier
VLMs/tunnel_vision/notebook/: ColPali + Qdrant.ipynb  ColPali + VLMs.ipynb  ColPali FineTuning Dataset.ipynb  ColPali FineTuning Training.ipynb
VLMs/tunnel_vision/src/utils/: utils.py
(+8 files in other folders)
